platform/monitoring/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  parentRefs:
    - name: platform
      namespace: gateway
      sectionName: https
  hostnames:
    - grafana.localtest.me
  rules:
    - backendRefs:
        - name: grafana
          port: 80
